--- a/src/index.html
+++ b/src/index.html
@@ -10,4 +10,8 @@
 <body>
   <app-root></app-root>
 </body>
+<link
+  href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap"
+  rel="stylesheet"
+/>
 </html>
